// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — résolution nom→apparence (anti-régression de-POC match-par-nom) > bestiaire (creatures.json) : label → (plan, espèce, def, échelle) 1`] = `
{
  "? (Créatures d’Outre-Tombe)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "? (Démons de Tzeentch)": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "? (Ours)": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Affreuse Vieille Sorcière Troll des Marais": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Amibe": {
    "def": "Amibe",
    "plan": "amorphous",
    "scale": 1,
    "species": "Amibe",
  },
  "Amphisbaena": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": "Serpent",
  },
  "Ancien": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Apothicaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Apprenti Technomage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Arachnarok": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Araignée Géante Adulte": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Araignée Géante Impitoyable": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Araignée géante": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Archer Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Archer Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Architechnomage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Artisan (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Artisan (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Assassin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Avocat": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Banshee": {
    "def": "Banshee",
    "plan": "spectral",
    "scale": 0.96,
    "species": "Banshee",
  },
  "Basilic": {
    "def": "Basilic",
    "plan": "quadruped",
    "scale": 1.1,
    "species": "Basilic",
  },
  "Batelier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bella la Noire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bestigor Chef de Guerre": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Bestigor Chef de Harde": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Bestigor Combattant": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Bouc Maudit": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Bourgmestre": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Brigand": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Brise-Krag": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Brochet du Stir": {
    "def": "Brochet du Stir",
    "plan": "fish",
    "scale": 1.05,
    "species": "Brochet du Stir",
  },
  "Buveur de Sang Exalté de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Buveur de Sang de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Bâtonnier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Bête des marais": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": "Bête des marais",
  },
  "Caledair - la Faux de Feu": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Capitaine (Patrouilleurs Fluviaux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Capitaine (Patrouilleurs Ruraux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Capitaine du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Carnosaure": {
    "def": "Carnosaure",
    "plan": "quadruped",
    "scale": 1.2,
    "species": "Carnosaure",
  },
  "Chamane Gobelin des Forêts": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Chamane-Brey": {
    "def": "Chamane-Brey",
    "plan": "biped",
    "scale": 1,
    "species": "Chamane-Brey",
  },
  "Charlatan": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Charognard": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chasseresse des Ombres": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chat Sauvage": {
    "def": "Chat Sauvage",
    "plan": "quadruped",
    "scale": 0.7,
    "species": "Chat Sauvage",
  },
  "Chauve-souris vampire (Varghulf)": {
    "def": "Varghulf",
    "plan": "winged",
    "scale": 1.1,
    "species": "Varghulf",
  },
  "Chef Contrebandier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef Pirate": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef Vétéran de la Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Bande": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Clan": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Chef de Clan Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Chef de Clan Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Chef de Guerre Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Chef de Guerre Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Chef de Meute": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef de Meute du Clan Moulder": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Chef de Portée": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Chef de Section": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Chef de la Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chef d’Escadron": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Cheval": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Chevalier Mort-Vivant (Revenant)": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Chevalier des Tombes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Chien": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chien de Chasse": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chien de Compagnie (Chiens)": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chien de Compagnie (II.A — Animaux Domestiques)": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chien de Garde": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chien de Ratier": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chimère": {
    "def": "Chimère",
    "plan": "winged",
    "scale": 1.2,
    "species": "Chimère",
  },
  "Choses du Bois Mort": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Citadin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cobaye Mutilé": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cockatrice": {
    "def": "Cockatrice",
    "plan": "winged",
    "scale": 0.9,
    "species": "Cockatrice",
  },
  "Comte Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Contrebandier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Contremaître": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cornu": {
    "def": "Cornu",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Cornu",
  },
  "Coureur Nocturne": {
    "def": "Coureur d'égout",
    "plan": "biped",
    "scale": 1,
    "species": "Coureur d'égout",
  },
  "Coureur d’Égouts": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Coursier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cultiste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Cultiste de la Lune Imprévisible": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Daemonette de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Demigriffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": "Griffon",
  },
  "Demigriffon adulte": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": "Griffon",
  },
  "Destrier": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Destrier (cheval de guerre lourd)": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Destrier Squelettique": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Doktor": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Dragon": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Dragon Barbelé": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Dragon de la Forêt": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Druide de la Foi Antique": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Démonette de Slaanesh": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Détective": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Elfe (haut et sylvain)": {
    "def": "Haut-Elfe",
    "plan": "biped",
    "scale": 1,
    "species": "Haut-Elfe",
  },
  "Enquêteur Chevronné": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Envoûteuse": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Esclave": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Esclave Faible": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Escroc": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Esprit Faible": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Eusapia Balacañon": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Expérience Unique du Clan Moulder": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Fanatique Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Fantôme": {
    "def": "Fantôme",
    "plan": "spectral",
    "scale": 0.95,
    "species": "Fantôme",
  },
  "Faucon des Montagnes Grises": {
    "def": "Faucon des Montagnes Grises",
    "plan": "avian",
    "scale": 0.78,
    "species": "Faucon des Montagnes Grises",
  },
  "Faussaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fimir": {
    "def": "Fimir",
    "plan": "biped",
    "scale": 1,
    "species": "Fimir",
  },
  "Fongus de Gork": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fongus de Mork": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fourgue": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Fr’hough Mournbreath": {
    "def": "Fr'hough Mournbreath",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": "Fr'hough Mournbreath",
  },
  "Furie Exaltée du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Furie du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Garde-Chiourme": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Gardien des Secrets Exalté de Slaanesh": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Gardien des Secrets de Slaanesh": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gobelin de la Nuit": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gobelin des Forêts": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Gor Chasseur": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Gor Chef de Guerre": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Gor Chef de Harde": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Gor Combattant": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Gor Éclaireur": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Goule de crypte": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Grand Aigle": {
    "def": "Grand Aigle",
    "plan": "avian",
    "scale": 1.05,
    "species": "Grand Aigle",
  },
  "Grand Cerf": {
    "def": "Grand Cerf",
    "plan": "quadruped",
    "scale": 1,
    "species": "Grand Cerf",
  },
  "Grand Immonde Exalté de Nurgle": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Grand Immonde de Nurgle": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Grand Incendiaire de Tzeentch": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": "Bête des marais",
  },
  "Grand Inquisiteur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Grand Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Grand Maître des Hybridations": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Grand Moine de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Grand Sanglier Ombrageux": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Grand Shaman Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Grand Shaman Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Grand Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": "Squig",
  },
  "Grand Taurus": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Grand Troll Sanguinaire": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Grande Prêtresse de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Griffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": "Griffon",
  },
  "Griffon (Zoo Impérial)": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": "Griffon",
  },
  "Guerrier Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Guerrier Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Guerrier des clans": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Guerrier du Chaos": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Guerrier du Chaos Chef de Bande": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Guerrier du Chaos Chef de Guerre": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Gueule d'Effroi": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": "Serpent",
  },
  "Guide-Racoleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Géant": {
    "def": "Géant",
    "plan": "biped",
    "scale": 1.2,
    "species": "Géant",
  },
  "Halfling": {
    "def": "Halfling",
    "plan": "biped",
    "scale": 1,
    "species": "Halfling",
  },
  "Haut Druide de la Foi Antique": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Haut Juge": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Haut Prêtre-Rôdeur de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Heomreth (Hibou Géant)": {
    "def": "Heomreth (Hibou Géant)",
    "plan": "avian",
    "scale": 1,
    "species": "Heomreth (Hibou Géant)",
  },
  "Herboriste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Homme du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Horde de Zombies": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Horreur Rose de Tzeentch": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Horreur bleue": {
    "def": "Horreur bleue",
    "plan": "biped",
    "scale": 0.8,
    "species": "Horreur bleue",
  },
  "Horreur des Profondeurs": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Horreur du Clan Moulder": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Horreur rose": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Humain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Hydre": {
    "def": "Hydre",
    "plan": "quadruped",
    "scale": 1.2,
    "species": "Hydre",
  },
  "Hyppogriffe": {
    "def": "Hippogriffe",
    "plan": "winged",
    "scale": 1.08,
    "species": "Hippogriffe",
  },
  "Héraut Exalté de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut Exalté de Nurgle": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut Exalté de Slaanesh": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut Exalté de Tzeentch": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Héraut de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut de Nurgle": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut de Slaanesh": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Héraut de Tzeentch": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Il Potente Granchio": {
    "def": "Il Potente Granchio",
    "plan": "crustace",
    "scale": 1.1,
    "species": "Il Potente Granchio",
  },
  "Incendiaire de Tzeentch": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": "Bête des marais",
  },
  "Inquisiteur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jabberslythe": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": "Jabberslythe",
  },
  "Jetsam - la Gelée Intelligente": {
    "def": "Amibe",
    "plan": "amorphous",
    "scale": 1,
    "species": "Amibe",
  },
  "Jeune Araignée Géante": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Jeune Brigand": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Citadin (Citadins)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Citadin (I.B - Habitants des Villes)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Contrebandier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Contremaître": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Délinquant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Jeune Gor": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Jeune Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Jeune Interrogateur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Jeune Moine de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Naufrageur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Jeune Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Jeune Rat Géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": "Rat géant",
  },
  "Jeune Recrue (Patrouilleurs Fluviaux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue (Patrouilleurs Ruraux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue (Soldats & Mercenaires)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue (Vermines de Choc)": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Jeune Recrue de la Garde du Village": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Recrue du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Jeune Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Jeune Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Jeune Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": "Squig",
  },
  "Jeune Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Jeune Ungor": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Jeune Villageois": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Juge": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Kapo": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "L'Ombre du Fleuve": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "La Bête de l'Oblast": {
    "def": "Chimère",
    "plan": "winged",
    "scale": 1.2,
    "species": "Chimère",
  },
  "Le Déchiqueteur de Cadavres": {
    "def": "Le Déchiqueteur de Cadavres",
    "plan": "quadruped",
    "scale": 1,
    "species": "Le Déchiqueteur de Cadavres",
  },
  "Le Fantasma": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Le Vieux Dos-de-Pus": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Lion de Guerre de Chrace": {
    "def": "Lion de Guerre de Chrace",
    "plan": "quadruped",
    "scale": 1,
    "species": "Lion de Guerre de Chrace",
  },
  "Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Loup Adulte": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Loup funeste": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Léviathan": {
    "def": "Léviathan",
    "plan": "crustace",
    "scale": 1.15,
    "species": "Léviathan",
  },
  "Macareux à Bec Tranchant": {
    "def": "Macareux à Bec Tranchant",
    "plan": "avian",
    "scale": 0.6,
    "species": "Macareux à Bec Tranchant",
  },
  "Magister Mortis": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Apothicaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Artisan (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Artisan (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Faussaire": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Herboriste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Marchand (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maistre Marchand (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Mangeuse d'hommes de la Drakwald (Araignée Géante)": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Manticore": {
    "def": "Manticore",
    "plan": "winged",
    "scale": 1.1,
    "species": "Manticore",
  },
  "Maraudeur du Chaos": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maraudeur du Chaos Chef de Bande": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maraudeur du Chaos Chef de Guerre": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Marchand (Services Ruraux Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Marchand (Services Urbains Fréquents & Usuels)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître Assassin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître des Hybridation": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître des Taillis": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Maître des Égouts": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Minotaure": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Moine D’ulric": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine Novice de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine de Sigmar": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Moine de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Monture Décharné": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Mutant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Médecin": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nain": {
    "def": "Nain",
    "plan": "biped",
    "scale": 1,
    "species": "Nain",
  },
  "Nautonier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Notable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nurglings": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Nuée D’araignées Infantiles": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Nuée de Jeunes Squigs": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Nuée de Marcassins": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Nuée de Nurglings": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Nuée de Rats": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Nuée de Snotlings": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Nuée de squigs des cavernes": {
    "def": "Squig",
    "plan": "swarm",
    "scale": 0.85,
    "species": "Squig",
  },
  "Nécromancien": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nécromancien Puissant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Nécrophage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Officier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Ogre": {
    "def": "Ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Ogre",
  },
  "Ombre Vengeresse": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": "Spectre",
  },
  "Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Ours Adulte": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Palefroi": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Patrouilleur Fluvial": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Patrouilleur Rural": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Peau-de-Loup": {
    "def": "Peau-de-Loup",
    "plan": "biped",
    "scale": 1,
    "species": "Peau-de-Loup",
  },
  "Pieuvre des tourbières": {
    "def": "Pieuvre",
    "plan": "cephalopod",
    "scale": 1.05,
    "species": "Pieuvre",
  },
  "Pigeon": {
    "def": "Pigeon",
    "plan": "avian",
    "scale": 0.62,
    "species": "Pigeon",
  },
  "Pilleur de Cryptes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pilleur de Tombes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pirate Fluvial": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Plongeur de la Mort": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pol Dankels": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Porte-Peste de Nurgle": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Poulain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Preyton": {
    "def": "Preyton",
    "plan": "winged",
    "scale": 1,
    "species": "Preyton",
  },
  "Prophète Gris": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Prophète Gris Ancien": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Protagoniste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prédicateur de la Peste": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre D’ulric": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre de Sigmar": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre-Rôdeur de Taal": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtre-Voleur de Ranald (I.C - Criminalité Urbaine)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtresse de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtresse de Shallya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Prêtresse de Verena": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Pâtre de la Nuit": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Pégase": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": "Pégase",
  },
  "Pégase Noir": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": "Pégase",
  },
  "Quadrilleur Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Racketteur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Racoleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Rat Géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": "Rat géant",
  },
  "Rat Loup": {
    "def": "Rat Loup",
    "plan": "quadruped",
    "scale": 0.85,
    "species": "Rat Loup",
  },
  "Rat Ogre Augmenté": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Rat Ogre Briseur d'os": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Rat Ogre Fonctionnel": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Rat géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": "Rat géant",
  },
  "Rat ogre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Raukos": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Razorgor": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Rebouteux": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Receleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Reine des Cryptes": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse Novice de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse de Rhya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse de Shallya": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Religieuse de Verena": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Rhinox": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Riverain": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Riverain Respecté": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Roi du Trafic": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Répurgateur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Sanglier Adulte": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Sanglier Féroce": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Sangsue Caméléon": {
    "def": "Sangsue",
    "plan": "serpentine",
    "scale": 0.92,
    "species": "Sangsue",
  },
  "Sanguinaire de Khorne": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Seigneur Pirate": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Seigneur Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Seigneur du Changement Exalté de Tzeentch": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Seigneur du Changement de Tzeentch": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Seigneur-Brigand": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sergent (Patrouilleurs Fluviaux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sergent (Patrouilleurs Ruraux)": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sergent du Guet": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Serpent": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": "Serpent",
  },
  "Shaman Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Shaman Gor": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Shaman Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Sirène": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Slenderthigh Whiptongue": {
    "def": "Slenderthigh Whiptongue",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": "Slenderthigh Whiptongue",
  },
  "Snotling": {
    "def": "Snotling",
    "plan": "biped",
    "scale": 1,
    "species": "Snotling",
  },
  "Soldat & Mercenaire Aguerri": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sommier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcier du Chaos": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcier du Chaos Effroyable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcier du Chaos Terrifiant": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcière": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Sorcière Troll des Marais": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Sorcière Troll des Rivières": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Sous-Officier": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Spectre": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": "Spectre",
  },
  "Spectre de cairn": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": "Spectre",
  },
  "Squelette": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squelette Vigoureux": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": "Squig",
  },
  "Squig Monstrueux": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": "Squig",
  },
  "Squig des cavernes": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": "Squig",
  },
  "Stégadon": {
    "def": "Stégadon",
    "plan": "quadruped",
    "scale": 1.3,
    "species": "Stégadon",
  },
  "Technomage": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Technomage Expérimenté": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Technomage du Clan Skryre": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Traqueur Impitoyable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Troll Vétéran": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Troll des Rivières": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Trégara": {
    "def": "Trégara",
    "plan": "crustace",
    "scale": 0.95,
    "species": "Trégara",
  },
  "Tueur À Gages": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Ungor Adulte": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Ver des Marais": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": "Serpent",
  },
  "Vermine de Choc": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Vermine de choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Vhargulf": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Vieil Ours Mal Léché": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Vieille Sorcière Troll des Marais": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Villageois": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Voleur": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Voleur Aguerri": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Volée de Noctecorbes": {
    "def": null,
    "plan": "swarm",
    "scale": 1,
    "species": null,
  },
  "Vouivre": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Vouivre (Zoo Impérial)": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Voyou": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Vénérable": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Wyrm des Mers": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": "Serpent",
  },
  "Zombie": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
  "Zombie Faible": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
  "Zombie Gardien": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
  "« L'abominable » Halagrundsor": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "« Prototype » du Clan Skryre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Éclaireur Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Éclaireur Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Érudit": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
  "Érudit de Renom": {
    "def": null,
    "plan": "biped",
    "scale": 1,
    "species": "Humain",
  },
}
`;

exports[`golden — résolution nom→apparence (anti-régression de-POC match-par-nom) > defs du registre : name → (plan, espèce, def, échelle) 1`] = `
{
  "Amibe": {
    "def": "Amibe",
    "plan": "amorphous",
    "scale": 1,
    "species": "Amibe",
  },
  "Araignée": {
    "def": "Araignée",
    "plan": "arachnid",
    "scale": 1,
    "species": "Araignée",
  },
  "Banshee": {
    "def": "Banshee",
    "plan": "spectral",
    "scale": 0.96,
    "species": "Banshee",
  },
  "Basilic": {
    "def": "Basilic",
    "plan": "quadruped",
    "scale": 1.1,
    "species": "Basilic",
  },
  "Brochet du Stir": {
    "def": "Brochet du Stir",
    "plan": "fish",
    "scale": 1.05,
    "species": "Brochet du Stir",
  },
  "Bête Impériale": {
    "def": "Bête Impériale",
    "plan": "biped",
    "scale": 0.85,
    "species": "Bête Impériale",
  },
  "Bête des marais": {
    "def": "Bête des marais",
    "plan": "amorphous",
    "scale": 1.1,
    "species": "Bête des marais",
  },
  "Carnosaure": {
    "def": "Carnosaure",
    "plan": "quadruped",
    "scale": 1.2,
    "species": "Carnosaure",
  },
  "Chamane-Brey": {
    "def": "Chamane-Brey",
    "plan": "biped",
    "scale": 1,
    "species": "Chamane-Brey",
  },
  "Chat Sauvage": {
    "def": "Chat Sauvage",
    "plan": "quadruped",
    "scale": 0.7,
    "species": "Chat Sauvage",
  },
  "Cheval": {
    "def": "Cheval",
    "plan": "quadruped",
    "scale": 0.9,
    "species": "Cheval",
  },
  "Chien": {
    "def": "Chien",
    "plan": "quadruped",
    "scale": 0.72,
    "species": "Chien",
  },
  "Chimère": {
    "def": "Chimère",
    "plan": "winged",
    "scale": 1.2,
    "species": "Chimère",
  },
  "Cockatrice": {
    "def": "Cockatrice",
    "plan": "winged",
    "scale": 0.9,
    "species": "Cockatrice",
  },
  "Cornu": {
    "def": "Cornu",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Cornu",
  },
  "Coureur d'égout": {
    "def": "Coureur d'égout",
    "plan": "biped",
    "scale": 1,
    "species": "Coureur d'égout",
  },
  "Crapaud": {
    "def": "Crapaud",
    "plan": "quadruped",
    "scale": 0.98,
    "species": "Crapaud",
  },
  "Dragon": {
    "def": "Dragon",
    "plan": "winged",
    "scale": 1.25,
    "species": "Dragon",
  },
  "Démon": {
    "def": "Démon",
    "plan": "biped",
    "scale": 1,
    "species": "Démon",
  },
  "Démonette": {
    "def": "Démonette",
    "plan": "biped",
    "scale": 1,
    "species": "Démonette",
  },
  "Elfe sylvain": {
    "def": "Elfe sylvain",
    "plan": "biped",
    "scale": 1,
    "species": "Elfe sylvain",
  },
  "Esclave skaven": {
    "def": "Esclave skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Esclave skaven",
  },
  "Fantôme": {
    "def": "Fantôme",
    "plan": "spectral",
    "scale": 0.95,
    "species": "Fantôme",
  },
  "Faucon des Montagnes Grises": {
    "def": "Faucon des Montagnes Grises",
    "plan": "avian",
    "scale": 0.78,
    "species": "Faucon des Montagnes Grises",
  },
  "Fimir": {
    "def": "Fimir",
    "plan": "biped",
    "scale": 1,
    "species": "Fimir",
  },
  "Fr'hough Mournbreath": {
    "def": "Fr'hough Mournbreath",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": "Fr'hough Mournbreath",
  },
  "Furie du Chaos": {
    "def": "Furie du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Furie du Chaos",
  },
  "Gnome": {
    "def": "Gnome",
    "plan": "biped",
    "scale": 1,
    "species": "Gnome",
  },
  "Gobelin": {
    "def": "Gobelin",
    "plan": "biped",
    "scale": 1,
    "species": "Gobelin",
  },
  "Gor": {
    "def": "Gor",
    "plan": "biped",
    "scale": 1,
    "species": "Gor",
  },
  "Goule": {
    "def": "Goule",
    "plan": "biped",
    "scale": 1,
    "species": "Goule",
  },
  "Grand Aigle": {
    "def": "Grand Aigle",
    "plan": "avian",
    "scale": 1.05,
    "species": "Grand Aigle",
  },
  "Grand Cerf": {
    "def": "Grand Cerf",
    "plan": "quadruped",
    "scale": 1,
    "species": "Grand Cerf",
  },
  "Griffon": {
    "def": "Griffon",
    "plan": "winged",
    "scale": 1.15,
    "species": "Griffon",
  },
  "Guerrier du Chaos": {
    "def": "Guerrier du Chaos",
    "plan": "biped",
    "scale": 1,
    "species": "Guerrier du Chaos",
  },
  "Géant": {
    "def": "Géant",
    "plan": "biped",
    "scale": 1.2,
    "species": "Géant",
  },
  "Halfling": {
    "def": "Halfling",
    "plan": "biped",
    "scale": 1,
    "species": "Halfling",
  },
  "Happeur carnivore": {
    "def": "Happeur carnivore",
    "plan": "avian",
    "scale": 1.15,
    "species": "Happeur carnivore",
  },
  "Haut-Elfe": {
    "def": "Haut-Elfe",
    "plan": "biped",
    "scale": 1,
    "species": "Haut-Elfe",
  },
  "Heomreth (Hibou Géant)": {
    "def": "Heomreth (Hibou Géant)",
    "plan": "avian",
    "scale": 1,
    "species": "Heomreth (Hibou Géant)",
  },
  "Hippogriffe": {
    "def": "Hippogriffe",
    "plan": "winged",
    "scale": 1.08,
    "species": "Hippogriffe",
  },
  "Homme-bête": {
    "def": "Homme-bête",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête",
  },
  "Homme-bête de Khorne": {
    "def": "Homme-bête de Khorne",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête de Khorne",
  },
  "Homme-bête à tête de poulet": {
    "def": "Homme-bête à tête de poulet",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête à tête de poulet",
  },
  "Homme-bête à tête de vache": {
    "def": "Homme-bête à tête de vache",
    "plan": "biped",
    "scale": 1,
    "species": "Homme-bête à tête de vache",
  },
  "Horreur bleue": {
    "def": "Horreur bleue",
    "plan": "biped",
    "scale": 0.8,
    "species": "Horreur bleue",
  },
  "Horreur rose": {
    "def": "Horreur rose",
    "plan": "biped",
    "scale": 1.15,
    "species": "Horreur rose",
  },
  "Hydre": {
    "def": "Hydre",
    "plan": "quadruped",
    "scale": 1.2,
    "species": "Hydre",
  },
  "Il Potente Granchio": {
    "def": "Il Potente Granchio",
    "plan": "crustace",
    "scale": 1.1,
    "species": "Il Potente Granchio",
  },
  "Jabberslythe": {
    "def": "Jabberslythe",
    "plan": "jabberslythe",
    "scale": 1.15,
    "species": "Jabberslythe",
  },
  "Jumeaux": {
    "def": "Jumeaux",
    "plan": "biped",
    "scale": 0.62,
    "species": "Jumeaux",
  },
  "Le Déchiqueteur de Cadavres": {
    "def": "Le Déchiqueteur de Cadavres",
    "plan": "quadruped",
    "scale": 1,
    "species": "Le Déchiqueteur de Cadavres",
  },
  "Liche": {
    "def": "Liche",
    "plan": "biped",
    "scale": 1,
    "species": "Liche",
  },
  "Lion de Guerre de Chrace": {
    "def": "Lion de Guerre de Chrace",
    "plan": "quadruped",
    "scale": 1,
    "species": "Lion de Guerre de Chrace",
  },
  "Loup": {
    "def": "Loup",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Loup",
  },
  "Léviathan": {
    "def": "Léviathan",
    "plan": "crustace",
    "scale": 1.15,
    "species": "Léviathan",
  },
  "Macareux à Bec Tranchant": {
    "def": "Macareux à Bec Tranchant",
    "plan": "avian",
    "scale": 0.6,
    "species": "Macareux à Bec Tranchant",
  },
  "Manticore": {
    "def": "Manticore",
    "plan": "winged",
    "scale": 1.1,
    "species": "Manticore",
  },
  "Minotaure": {
    "def": "Minotaure",
    "plan": "biped",
    "scale": 1,
    "species": "Minotaure",
  },
  "Nain": {
    "def": "Nain",
    "plan": "biped",
    "scale": 1,
    "species": "Nain",
  },
  "Ogre": {
    "def": "Ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Ogre",
  },
  "Orc": {
    "def": "Orc",
    "plan": "biped",
    "scale": 1,
    "species": "Orc",
  },
  "Ours": {
    "def": "Ours",
    "plan": "quadruped",
    "scale": 1.05,
    "species": "Ours",
  },
  "Peau-de-Loup": {
    "def": "Peau-de-Loup",
    "plan": "biped",
    "scale": 1,
    "species": "Peau-de-Loup",
  },
  "Pieuvre": {
    "def": "Pieuvre",
    "plan": "cephalopod",
    "scale": 1.05,
    "species": "Pieuvre",
  },
  "Pigeon": {
    "def": "Pigeon",
    "plan": "avian",
    "scale": 0.62,
    "species": "Pigeon",
  },
  "Preyton": {
    "def": "Preyton",
    "plan": "winged",
    "scale": 1,
    "species": "Preyton",
  },
  "Prophète gris": {
    "def": "Prophète gris",
    "plan": "biped",
    "scale": 1,
    "species": "Prophète gris",
  },
  "Pégase": {
    "def": "Pégase",
    "plan": "winged",
    "scale": 0.95,
    "species": "Pégase",
  },
  "Rassarak": {
    "def": "Rassarak",
    "plan": "biped",
    "scale": 1,
    "species": "Rassarak",
  },
  "Rat Loup": {
    "def": "Rat Loup",
    "plan": "quadruped",
    "scale": 0.85,
    "species": "Rat Loup",
  },
  "Rat géant": {
    "def": "Rat géant",
    "plan": "quadruped",
    "scale": 0.62,
    "species": "Rat géant",
  },
  "Rat ogre": {
    "def": "Rat ogre",
    "plan": "biped",
    "scale": 1,
    "species": "Rat ogre",
  },
  "Sanglier": {
    "def": "Sanglier",
    "plan": "quadruped",
    "scale": 0.82,
    "species": "Sanglier",
  },
  "Sangsue": {
    "def": "Sangsue",
    "plan": "serpentine",
    "scale": 0.92,
    "species": "Sangsue",
  },
  "Serpent": {
    "def": "Serpent",
    "plan": "serpentine",
    "scale": 1,
    "species": "Serpent",
  },
  "Skaven": {
    "def": "Skaven",
    "plan": "biped",
    "scale": 1,
    "species": "Skaven",
  },
  "Slenderthigh Whiptongue": {
    "def": "Slenderthigh Whiptongue",
    "plan": "jabberslythe",
    "scale": 1.05,
    "species": "Slenderthigh Whiptongue",
  },
  "Snotling": {
    "def": "Snotling",
    "plan": "biped",
    "scale": 1,
    "species": "Snotling",
  },
  "Spectre": {
    "def": "Spectre",
    "plan": "spectral",
    "scale": 0.98,
    "species": "Spectre",
  },
  "Squelette": {
    "def": "Squelette",
    "plan": "biped",
    "scale": 1,
    "species": "Squelette",
  },
  "Squig": {
    "def": "Squig",
    "plan": "squig",
    "scale": 0.85,
    "species": "Squig",
  },
  "Stégadon": {
    "def": "Stégadon",
    "plan": "quadruped",
    "scale": 1.3,
    "species": "Stégadon",
  },
  "Troll": {
    "def": "Troll",
    "plan": "biped",
    "scale": 1,
    "species": "Troll",
  },
  "Trégara": {
    "def": "Trégara",
    "plan": "crustace",
    "scale": 0.95,
    "species": "Trégara",
  },
  "Ungor": {
    "def": "Ungor",
    "plan": "biped",
    "scale": 1,
    "species": "Ungor",
  },
  "Urzo": {
    "def": "Urzo",
    "plan": "biped",
    "scale": 1.25,
    "species": "Urzo",
  },
  "Vampire": {
    "def": "Vampire",
    "plan": "biped",
    "scale": 1,
    "species": "Vampire",
  },
  "Varghulf": {
    "def": "Varghulf",
    "plan": "winged",
    "scale": 1.1,
    "species": "Varghulf",
  },
  "Vermine de choc": {
    "def": "Vermine de choc",
    "plan": "biped",
    "scale": 1.1,
    "species": "Vermine de choc",
  },
  "Zombie": {
    "def": "Zombie",
    "plan": "biped",
    "scale": 1,
    "species": "Zombie",
  },
}
`;
